--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <head>
     <title>BARTicus</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-cosmo.css">
+    <link rel="stylesheet" href="css/sticky-footer.css">
 </head>
-<body data-ng-app="">
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">Header
+<body>
+<div id="wrap">
+    <div class="navbar navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header"><h4>Header Goes Here</h4>
+            </div>
         </div>
     </div>
 
+    <div class="container">
+        <div class="col-lg-2">
+            <div class="btn-danger">Danger!</div>
+        </div>
+    </div>
 </div>
 
 <div id="footer">
-    <div class="container">Last Updated ...</div>
+    <div class="container"><h4>Last Updated Goes Here</h4></div>
 </div>
 
 
-<script src="https://code.jquery.com/jquery.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/angular.js"></script>
 
