added length of cars

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                                 <span ng-switch-when="0"><em class="atstation">At station</em></span>
                                 <span ng-switch-default>{{departure}}</span>
                             </span>
+							<sup>{{etd.length}}</sup>
                         </span>
                     </div>
                 </li>
