--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                             <span class="extrapadding" ng-switch="departure">
                                 <span ng-switch-when="0"><em class="atstation">At station</em></span>
                                 <span ng-switch-default>{{departure}}</span>
-                            </span>
-							<sup>{{etd.length}}</sup>
+                            </span><sup>({{etd.length}})</sup>&nbsp;&nbsp;
                         </span>
                     </div>
                 </li>
