--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         <span ng-repeat="departure in etd.departures">
                             <span class="extrapadding" ng-switch="departure">
                                 <span ng-switch-when="0"><em class="atstation">At station</em></span>
-                                <span ng-switch-default>{{departure}}</span>
-                            </span><sup>({{etd.length}})</sup>&nbsp;&nbsp;
+                                <span ng-switch-default>{{departure.minutes}}</span>
+                            </span><sup>({{departure.length}})</sup>&nbsp;&nbsp;
                         </span>
                     </div>
                 </li>
